Added file via upload
Removed unnecessary comment

--- a/nilaa-coffee-email.html
+++ b/nilaa-coffee-email.html
@@ -6,8 +6,7 @@
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!--<meta name="color-scheme" content="light dark">
-   <meta name="supported-color-schemes" content="light dark">-->
+
    <title>Nilaa Coffee</title>
    <style type="text/css">
       @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
@@ -50,21 +49,13 @@
             padding-top: 0 !important;
          }
 
-         img.one-third-col-img,
-         img.three-col-img-last {
+         img.one-third-col-img {
             width: 200px !important;
             max-width: 200px !important;
          }
 
          .two-third-columns .content {
             text-align: center !important;
-         }
-      }
-
-      @media screen and (max-width: 399.98px) {
-         img.three-col-img {
-            width: 200px !important;
-            max-width: 200px !important;
          }
       }
    </style>
@@ -89,7 +80,7 @@
    <center style="width: 100%;table-layout: fixed;background-color:#dde0e1;padding-bottom: 40px;">
       <div style="max-width: 600px;background-color: #fafdfe;box-shadow: 0 0 10px rgba(0, 0, 0, .2);">
 
-         <!-- Preheader (remove comment) -->
+
          <div
             style="font-size: 0px;color: #fafdfe;line-height: 1px;mso-line-height-rule:exactly;display: none;max-width: 0px;max-height: 0px;opacity: 0;overflow: hidden;mso-hide:all;">
             Nilaa Coffee is offering a new Myanmar brand coffee.
@@ -323,7 +314,7 @@
                                                    <td style="border-radius: 10px;" bgcolor="#1e5d7b">
                                                       <a href="https://www.nilaacoffee.com/buy-coffee/p/shwe-taun-blend"
                                                          target="_blank"
-                                                         style="font-size: 16px; font-weight: bold;text-decoration:none;color:#ffffff;background-color: #1e5d7b;border:1px solid #1e5d7b;border-radius: 10px;padding: 10px 25px;display: inline-block;">LEARN
+                                                         style="font-size: 16px; font-weight: bold; text-decoration: underline;color:#ffffff;background-color: #1e5d7b;border:1px solid #1e5d7b;border-radius: 10px;padding: 10px 25px;display: inline-block">LEARN
                                                          MORE</a>
                                                    </td>
 
